<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".groupChat"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:focusableInTouchMode="true"
            android:background="@color/teal_700"
            android:theme="@style/Base.CardView"
            app:popupTheme="@style/Widget.AppCompat.PopupMenu">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:id="@+id/ProfileImage"
                android:src="@drawable/slogo"
                android:clickable="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userName"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:text="username"
                android:textColor="@color/black"
                android:textStyle="bold"

                android:layout_marginStart="25dp"/>

            <ImageView
                android:layout_marginTop="5dp"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:id="@+id/addGrp"
                android:src="@drawable/addgrp"
                android:layout_marginLeft="180dp"
                android:clickable="true"
                />

        </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_example"
        android:layout_width="match_parent"
        android:layout_height="656dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="1dp">

        <TextView
            android:id="@+id/displayChat"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:scrollbars = "vertical"
            android:elevation="2dp"
            android:padding="10dp"
            android:textColor="#fff"
            android:textSize="14dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_alignParentBottom="true"

        android:orientation="horizontal">

        <ImageView
            android:id="@+id/attachments"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="left"
            android:clickable="true"
            android:src="@drawable/logos"
            />

        <EditText
            android:id="@+id/textSend"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="5"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:hint="Type the message"
            android:scrollHorizontally="false" />

        <Button
            android:id="@+id/sendComment"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="right"
            android:text=">"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    </LinearLayout>
</ScrollView>