<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".friendList"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:id="@+id/ProfileImage"
            android:src="@drawable/slogo"
            android:clickable="true"
            />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:id="@+id/grpbtn"
            android:src="@drawable/grp"
            android:layout_marginLeft="180dp"
            android:clickable="true"
            />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:id="@+id/usersList"/>
    <ImageView
        android:id="@+id/add"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="330dp"
        android:src="@drawable/plus"/>

</LinearLayout>