<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/backgrnd">


    <ImageView
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:src="@drawable/mlogo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sender"
        android:layout_gravity="center"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_marginTop="-70dp"
        android:textColor="@color/teal_700"/>

    <Button
        android:layout_width="170dp"
        android:id="@+id/btn_signup"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="SignUp"
        android:layout_marginTop="90dp"
        android:background="#000"
        android:textColor="#fff"/>
    <Button
        android:layout_width="170dp"
        android:id="@+id/btn_signIn"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="SignIn"
        android:background="#000"
        android:textColor="#fff"/>

</LinearLayout>